--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,3 +52,5 @@ jobs:
     - name: Deploy
       run: |
         aws s3 cp "${{ github.workspace }}/${{github.run_id}}.zip" s3://elasticbeanstalk-us-east-1-${{ secrets.AWS_ACCOUNT_ID }}/artifact/dotnet-mvc-app/
+        aws elasticbeanstalk create-application-version --application-name ha-app --version-label ${{github.run_id}} --description ${{github.run_id}} --source-bundle S3Bucket="elasticbeanstalk-us-east-1-836956848110",S3Key="gitlab-artifact/${{github.run_id}}.zip"
+
