--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -55,3 +55,11 @@ jobs:
         aws s3 cp "${{ github.workspace }}/${{github.run_id}}.zip" s3://elasticbeanstalk-us-east-1-${{ secrets.AWS_ACCOUNT_ID }}/artifact/dotnet-mvc-app/
         aws elasticbeanstalk create-application-version --application-name dotnet-mvc-app-host --version-label ${{github.run_id}} --description ${{github.run_id}} --source-bundle S3Bucket="elasticbeanstalk-us-east-1-${{ secrets.AWS_ACCOUNT_ID }}",S3Key="artifact/dotnet-mvc-app/${{github.run_id}}.zip"
 
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/download-artifact@v4.1.7
+    - name: Debug
+      run: |
+        ls
