--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,24 +44,21 @@ jobs:
       with: 
         name: deploy-files
         path: ${{github.run_id}}.zip
+  deploy:
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/download-artifact@v4.1.7
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-region: us-east-1
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Deploy
-      run: |
-        aws s3 cp "${{ github.workspace }}/${{github.run_id}}.zip" s3://elasticbeanstalk-us-east-1-${{ secrets.AWS_ACCOUNT_ID }}/artifact/dotnet-mvc-app/
-        aws elasticbeanstalk create-application-version --application-name dotnet-mvc-app-host --version-label ${{github.run_id}} --description ${{github.run_id}} --source-bundle S3Bucket="elasticbeanstalk-us-east-1-${{ secrets.AWS_ACCOUNT_ID }}",S3Key="artifact/dotnet-mvc-app/${{github.run_id}}.zip"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - uses: actions/download-artifact@v4.1.7
     - name: Debug
       run: |
         cd deploy-files
         ls
+        ls ${{ github.workspace }}
