--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,8 +10,8 @@ env:
   PROJECT_LOCATION: dotnet-mvc/dotnet-mvc.csproj
   PROJECT_OUTPUT : project_output
   PACK_OUTPUT: output
-  ELASTIC_BEANSTALK_NAME: dotnet-mvc-app-host
-  ELASTIC_BEANSTALK_ENV_NAME: Dotnet-mvc-app-host-env 
+  ELASTIC_BEANSTALK_NAME: demo-one
+  ELASTIC_BEANSTALK_ENV_NAME: Demo-one-dev
 
 jobs:
   build:
